<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appBar_background"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:title="Settings"
        app:navigationIcon="@drawable/outline_arrow_back_24"
        app:titleTextColor="?attr/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                    android:id="@+id/layoutHeightUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/outline_height_24"
                        android:contentDescription="@string/height"
                        app:tint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="12dp"
                        android:text="@string/default_height_unit"
                        android:textSize="16sp"
                        android:textColor="?attr/colorOnSurface" />

                    <TextView
                        android:id="@+id/tvCurrentHeightUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_cm"
                        android:textColor="?attr/colorPrimary"
                        android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layoutLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/outline_language_24"
                        android:contentDescription="@string/language"
                        app:tint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="12dp"
                        android:text="@string/language"
                        android:textSize="16sp"
                        android:textColor="?attr/colorOnSurface" />

                    <TextView
                        android:id="@+id/tvCurrentLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english_bangla"
                        android:textColor="?attr/colorPrimary"
                        android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/outline_share_24"
                    android:contentDescription="@string/language"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="Share"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSurface" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/outline_apps_24"
                    android:contentDescription="@string/language"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:text="More Apps"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnSurface" />


            </LinearLayout>




        </LinearLayout>
    </ScrollView>
</LinearLayout>